<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Cuidadores extends Model
{
    protected $fillable = [
        'id',
        'nombre',
        'apellido',
        'especialidad',
    ];

    public function animales()
    {
        return $this-hasMany(Animales::class, 'id');
    }
    public function especies()
    {
        return $this->belongTo(Especies::class, 'id');
    }
}
