<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Especies extends Model
{
    protected $fillable = [
        'id',
        'nombre',
    ];

    public function animales()
    {
        return $this->belongsTo('App\Models\Animales');
    }
}
