<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Usuarios extends Model
{
    protected $fillable = [
        'id',
        'nombre',
        'apellido',
        'clave',
    ];

    public function Animales()
    {
        return $this->belongsTo(Animales::class, 'id');
    }
}
